Refactor : swagger
